--- a/Example/PostFilters/BloomFilterTest.html
+++ b/Example/PostFilters/BloomFilterTest.html
@@ -14,8 +14,8 @@
             width: 50px;
         }
     </style>
-    <!--<link rel="stylesheet" type="text/css" href="../Assets/Htmls/Css/Base.css"/>-->
-    <!--<script src="../Assets/Htmls/Js/Infos.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="../Assets/Htmls/Css/Base.css"/>
+    <script src="../Assets/Htmls/Js/Infos.js"></script>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
@@ -34,7 +34,7 @@
 
 
 
-    // addInfos('BloomFilter', '该案例演示了基本的Bloom过滤器,extractThreshold表示泛光阈值,exposurePower表示曝光程度,bloomIntensity表示泛光强度,blurScale用于计算泛光缩放尺度(可能会产生锯齿)。');
+    addInfos('BloomFilter', '该案例演示了基本的Bloom过滤器,extractThreshold表示泛光阈值,exposurePower表示曝光程度,bloomIntensity表示泛光强度,blurScale用于计算泛光缩放尺度(可能会产生锯齿)。');
 
     import BoolVars from "../../src/Core/WebGL/Vars/BoolVars.js";
     import Texture2DVars from "../../src/Core/WebGL/Vars/Texture2DVars.js";
