--- a/Example/Shadows/ParallelSplitShadowMapShadowTest.html
+++ b/Example/Shadows/ParallelSplitShadowMapShadowTest.html
@@ -30,6 +30,12 @@
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
     import DirectionalLightShadowProcess from "../../src/Core/Shadow/DirectionalLightShadowProcess.js";
     import Vec4Vars from "../../src/Core/WebGL/Vars/Vec4Vars.js";
+    import Ext from "../Ext.js";
+
+    let ext = new Ext();
+    ext.show('  这个例子演示了基于PSSM(ParallelSplitShadowMapShadow)的DirectionalLight的阴影渲染，在这里，设置了ShadowSplitType为S_SHADER_SPLIT_TYPE_HALF_TRANSITION，并设置了4层分区，第一级为1024*1024，第二级为512*512，依次类推。', {lineheight:50});
+
+
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     let mainCamera = scene.getComponent('mainCamera');
     // mainCamera.lookAt(new Vector3(25, 25, 25), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
@@ -73,10 +79,14 @@
     let dirLight = new DirectionalLight(scene, {id:'dirLight'});
     dirLight.setDirectionXYZ(-1, -1, 1);
     dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
+    // 调试(只能在第一次调用proShadow()生效)
     dirLight.debugShadowMap();
-    // 最大ShadowMapSize为1024
+    // dirLight.setShadowSplitType(DirectionalLight.S_SHADER_SPLIT_TYPE_FIXED);
+    // 设置PSSM分区模式(只能在第一次调用proShadow()生效)
+    dirLight.setShadowSplitType(DirectionalLight.S_SHADER_SPLIT_TYPE_HALF_TRANSITION);
+    // 最大ShadowMapSize为1024(只能在第一次调用proShadow()生效)
     dirLight.setShadowMapSize(1024);
-    // 设置4层ShadowMap分区
+    // 设置4层ShadowMap分区(只能在第一次调用proShadow()生效)
     dirLight.setShadowSplitNum(4);
     dirLight.proShadow(true);
     dirLight.getShadow().setShadowIntensity(0.8);
