--- a/Example/Shadows/PointLightShadowTest.html
+++ b/Example/Shadows/PointLightShadowTest.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ParallelSplitShadowMapShadowTest</title>
+    <title>PointLightShadowTest</title>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;">
-    <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
+    <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0" width="800" height="600"></canvas>
 </div>
 <script src="./../dat.gui.min.js"></script>
 <script type="module">
@@ -14,32 +14,25 @@
     import RenderEngine from "../../src/Core/RenderEngine.js";
     import Node from "../../src/Core/Node/Node.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
-    import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
     import Stats from "../stats.min.js";
     import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
     import Texture2DVars from "../../src/Core/WebGL/Vars/Texture2DVars.js";
+    import Mesh from "../../src/Core/WebGL/Mesh.js";
     import SkyBox from "../../src/Core/Node/Sky/SkyBox.js";
     import Vector4 from "../../src/Core/Math3d/Vector4.js";
     import GLTFLoader from "../../src/Supp/GLTFLoader.js";
-    import ProbeTools from "../../src/Core/Util/ProbeTools.js";
     import BoolVars from "../../src/Core/WebGL/Vars/BoolVars.js";
     import RadianceLoader from "../../src/Supp/RadianceLoader.js";
+    import PointLight from "../../src/Core/Light/PointLight.js";
+    import ProbeTools from "../../src/Core/Util/ProbeTools.js";
     import GIProbe from "../../src/Core/Light/GIProbe.js";
-    import Plane from "../../src/Core/Node/Shape/Plane.js";
+    import Sphere from "../../src/Core/Node/Shape/Sphere.js";
     import Material from "../../src/Core/Material/Material.js";
-    import MaterialDef from "../../src/Core/Material/MaterialDef.js";
-    import DirectionalLightShadowProcess from "../../src/Core/Shadow/DirectionalLightShadowProcess.js";
     import Vec4Vars from "../../src/Core/WebGL/Vars/Vec4Vars.js";
-    import Ext from "../Ext.js";
-
-    let ext = new Ext();
-    ext.show('  这个例子演示了基于PSSM(ParallelSplitShadowMapShadow)的DirectionalLight的阴影渲染，在这里，设置了ShadowSplitType为S_SHADER_SPLIT_TYPE_HALF_TRANSITION，并设置了4层分区，第一级为1024*1024，第二级为512*512，依次类推。', {lineheight:50});
-
-
+    import MaterialDef from "../../src/Core/Material/MaterialDef.js";
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     let mainCamera = scene.getComponent('mainCamera');
-    // mainCamera.lookAt(new Vector3(25, 25, 25), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
-    mainCamera.lookAt(new Vector3(-70.04971538141703,112.1166428168139,115.71113243476611), new Vector3(-0.7636363229868266,15.599713284563862,3.228377883106475), new Vector3(0, 1, 0));
+    mainCamera.lookAt(new Vector3(2.950315, 1.5485021, -0.06550171), new Vector3(-3.8440266, -1.997144, 0.06595602), new Vector3(-0.44864178, 0.8937116, 2.2803247E-4));
 
     let rootNode = new Node(scene, {id:'rootNode'});
     // 环境纹理加载完再开始创建创建
@@ -62,41 +55,52 @@
 
         let gltfLoader = new GLTFLoader();
         gltfLoader.setAssetsPath("../../src/Core/Assets/MaterialDef/");
-        gltfLoader.load(scene, './../Assets/Models/GLTF/LevelBlockout/scene.gltf', modelNode=>{
+        gltfLoader.load(scene, './../Assets/Models/GLTF/MiniScene/test.gltf', modelNode=>{
             rootNode.addChildren(modelNode);
 
             let sceneControl = new SceneBrowsingController(scene, {id:"controller"});
             sceneControl.setMinVerticalRotation(0);
-            sceneControl.lookScene(rootNode);
+            sceneControl.lookScene(modelNode);
             sceneControl.setTargetDistance(10);
         }, {batch:false});
+
+        // let dirLight = new DirectionalLight(scene, {id:'dirLight'});
+        // dirLight.setDirectionXYZ(-1, -1, 1);
+        // dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
+        // rootNode.addChildren(dirLight);
+
         window.giProbe = new GIProbe(scene, {id:'giProbe'});
         window.giProbe.setRadius(20);
         window.giProbe.setPositionFromXYZ(0, 5, 0);
         let envCapture = ProbeTools.bakeGIProbe(scene, window.giProbe, {resolute:128});
     });
 
-    let dirLight = new DirectionalLight(scene, {id:'dirLight'});
-    dirLight.setDirectionXYZ(-1, -1, 1);
-    dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
-    // 调试(只能在第一次调用proShadow()生效)
-    dirLight.debugShadowMap();
-    // dirLight.setShadowSplitType(DirectionalLight.S_SHADER_SPLIT_TYPE_FIXED);
-    // 设置PSSM分区模式(只能在第一次调用proShadow()生效)
-    dirLight.setShadowSplitType(DirectionalLight.S_SHADER_SPLIT_TYPE_HALF_TRANSITION);
-    // 最大ShadowMapSize为1024(只能在第一次调用proShadow()生效)
-    dirLight.setShadowMapSize(1024);
-    // 设置4层ShadowMap分区(只能在第一次调用proShadow()生效)
-    dirLight.setShadowSplitNum(4);
-    dirLight.proShadow(true);
-    dirLight.getShadow().setShadowIntensity(0.8);
-    rootNode.addChildren(dirLight);
+    let pointLight = new PointLight(scene, {id:'pointLight'});
+    pointLight.setRadius(8.0);
+    pointLight.setColorRGBA(0.5, 0.5, 0.5, 1.0);
+    pointLight.setPositionXYZ(-7, 2, 0);
+    // pointLight.debugShadowMap();
+    pointLight.proShadow(true);
+    rootNode.addChildren(pointLight);
 
+    // let sphere = new Sphere(scene, {id:'pointLight_geo:', radius:1.0});
+    // let colorMat = new Material(scene, {id:'colorMat', materialDef:MaterialDef.load("../../src/Core/Assets/MaterialDef/ColorDef")});
+    // colorMat.setParam('color', new Vec4Vars().valueFromXYZW(1.0, 1.0, 1.0, 1.0));
+    // sphere.setLocalTranslation(pointLight.getPosition());
+    // sphere.castShadow(false);
+    // sphere.receiveShadow(false);
+    // sphere.setLocalScaleXYZ(pointLight.getRadius(), pointLight.getRadius(), pointLight.getRadius());
+    // sphere.setMaterial(colorMat);
+    // sphere.getMesh().setPrimitive(Mesh.S_PRIMITIVE_LINES);
+    // sphere.updateBound();
+    // rootNode.addChildren(sphere);
 
     // 使用dat gui
     let gui = new dat.GUI();
     var settings = {
-        directionalLight: true,
+        pointLight: true,
+        radius:pointLight.getRadius(),
+        pointLightX:pointLight.getPosition()._m_X,
         gi:true,
         shadow: true,
         biasFactor:1.0,
@@ -104,13 +108,21 @@
         backfaceShadows:false,
         shadowIntensity: 0.8
     };
-    gui.add(settings, 'directionalLight').onChange(function(value) {
+    gui.add(settings, 'pointLight').onChange(function(value) {
         if(value){
-            dirLight.enable();
+            pointLight.enable();
         }
         else{
-            dirLight.disable();
+            pointLight.disable();
         }
+    });
+    gui.add(settings, 'radius', 1, 20).step(1).onChange(value=>{
+        pointLight.setRadius(value);
+        // sphere.setLocalScaleXYZ(value, value, value);
+    });
+    gui.add(settings, 'pointLightX', -10, 10).step(1).onChange(value=>{
+        pointLight.setPositionXYZ(value, 2, 0);
+        // sphere.setLocalTranslation(pointLight.getPosition());
     });
     gui.add(settings, 'gi').onChange(function(value) {
         if(value){
@@ -121,19 +133,19 @@
         }
     });
     gui.add(settings, 'shadow').onChange(function(value) {
-        dirLight.proShadow(value);
+        pointLight.proShadow(value);
     });
     gui.add(settings, 'biasFactor').onChange(function(value) {
-        dirLight.getShadow().setBias(value, settings.biasUnits);
+        pointLight.getShadow().setBias(value, settings.biasUnits);
     });
     gui.add(settings, 'biasUnits').onChange(function(value) {
-        dirLight.getShadow().setBias(settings.biasFactor, value);
+        pointLight.getShadow().setBias(settings.biasFactor, value);
     });
     gui.add(settings, 'backfaceShadows').onChange(function(value) {
-        dirLight.getShadow().setBackfaceShadows(value);
+        pointLight.getShadow().setBackfaceShadows(value);
     });
     gui.add(settings, 'shadowIntensity', 0.1, 1.0).step(0.1).onChange(function(value) {
-        dirLight.getShadow().setShadowIntensity(value);
+        pointLight.getShadow().setShadowIntensity(value);
     });
 
     let renderEngine = new RenderEngine();
@@ -150,7 +162,6 @@
         stats.update();
         // console.log('eye:' + mainCamera.getEye().toString());
         // console.log('at:' + mainCamera.getAt().toString());
-        // console.log('up:' + mainCamera.getUp().toString());
     });
 </script>
 </body>
