--- a/Example/Optimizations/LevelOfDetailTest.html
+++ b/Example/Optimizations/LevelOfDetailTest.html
@@ -23,6 +23,7 @@
         import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
         import Input from "../../src/Core/InputControl/Input.js";
         import LodControl from "../../src/Core/Optimization/LodControl.js";
+        import Vec4Vars from "../../src/Core/WebGL/Vars/Vec4Vars.js";
 
         let scene = new Scene({cavnas:document.getElementById('render')});
         let mainCamera = scene.getMainCamera();
@@ -54,9 +55,11 @@
         // 该geometry只包含两个lod level,如果设置lod 2则报错
         geometry.lod(0);
 
-        let materialDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/BasicLightingDef");
+        let materialDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/Light/BasicLightingDef");
         let basicLightingMat = new Material(scene, {id:"basicLightingMat", materialDef});
-        basicLightingMat.selectTechnology('BlinnPhongLight2');
+        basicLightingMat.setParam('ambientColor', new Vec4Vars().valueFromXYZW(0.2, 0.2, 0.2, 1.0));
+        basicLightingMat.setParam('diffuseColor', new Vec4Vars().valueFromXYZW(0.5, 0.5, 0.5, 1.0));
+        basicLightingMat.setParam('specularColor', new Vec4Vars().valueFromXYZW(1.0, 1.0, 1.0, 1.0));
         geometry.setMaterial(basicLightingMat);
         let lodControl = new LodControl(geometry, {id:'lodControl', distCommonDifference:0.1});
 
