--- a/Example/PostFilters/BloomFilterTest.html
+++ b/Example/PostFilters/BloomFilterTest.html
@@ -3,38 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>BloomFilterTest</title>
-    <style>
-        #baseColor input{
-            width: 50px;
-        }
-        #baseColor2 input{
-            width: 50px;
-        }
-        #specular input{
-            width: 50px;
-        }
-    </style>
-    <link rel="stylesheet" type="text/css" href="../Assets/Htmls/Css/Base.css"/>
-    <script src="../Assets/Htmls/Js/Infos.js"></script>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
     <canvas id="canvas" tabindex="0" width="400" height="300" style="border: none;margin: 0px;padding: 0px;"></canvas>
 </div>
-<div style="position: fixed;top: 0px;right: 0px;">
-    <p style="color: white;text-align: right" id="bloomParams">
-        extractThreshold:<input style="margin-left:10px;width: 100px;" type="text" value="0.5"/><br/>
-        exposurePower:<input style="margin-left:10px;width: 100px;" type="text" value="2.0"/><br/>
-        bloomIntensity:<input style="margin-left:10px;width: 100px;" type="text" value="2.0"/><br/>
-        blurScale:<input style="margin-left:10px;width: 100px;" type="text" value="1.5"/><br/>
-    </p>
-</div>
+<script src="./../dat.gui.min.js"></script>
 <script type="module">
 
 
 
-
-    addInfos('BloomFilter', '该案例演示了基本的Bloom过滤器,extractThreshold表示泛光阈值,exposurePower表示曝光程度,bloomIntensity表示泛光强度,blurScale用于计算泛光缩放尺度(可能会产生锯齿)。');
 
     import BoolVars from "../../src/Core/WebGL/Vars/BoolVars.js";
     import Texture2DVars from "../../src/Core/WebGL/Vars/Texture2DVars.js";
@@ -44,13 +22,11 @@
     import Node from "../../src/Core/Node/Node.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
     import SkyBox from "../../src/Core/Node/Sky/SkyBox.js";
-    import FirstPersonController from "../../src/Core/InputControl/FirstPersonController.js";
     import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
     import Stats from "../stats.min.js";
     import OBJLoader from "../../src/Supp/OBJLoader.js";
     import Material from "../../src/Core/Material/Material.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
-    import Input from "../../src/Core/InputControl/Input.js";
     import Vector4 from "../../src/Core/Math3d/Vector4.js";
 
 
@@ -73,7 +49,6 @@
     scene.setSky(sky);
 
 
-    let firstPersonController = new FirstPersonController(scene, {id:'myController'});
     let rootNode = new Node(scene, {id:'rootNode'});
 
     let dirLight = new DirectionalLight(scene, {id:'dirLight'});
@@ -82,56 +57,66 @@
     rootNode.addChildren(dirLight);
 
     let objLoader = new OBJLoader();
-    objLoader.setAssetsPath("../../src/Core/Assets/MaterialDef/");
+    objLoader.config({alphaMode:OBJLoader.S_ALPHA_MODE_DISCARD});
+    objLoader.setAssetsPath("../../src/Core/Assets/MaterialDef/Light/");
     objLoader.load(scene, 'grayScene', './../Assets/Models/OBJ/MainScene/mainScene.obj', (modelNode)=>{
         rootNode.addChildren(modelNode);
-        let bloomFilter = mainCamera.addFilterFromMaterial(new Material(scene, {id:'bloomFilter', materialDef:MaterialDef.load('../../src/Core/Assets/MaterialDef/BloomFilterDef')}));
+        let bloomFilter = mainCamera.addFilterFromMaterial(new Material(scene, {id:'bloomFilter', materialDef:MaterialDef.load('../../src/Core/Assets/MaterialDef/Filter/BloomFilterDef')}));
         let mat = bloomFilter.getMaterial();
-        // mat.setParam('extractThreshold', new FloatVars().valueOf(0.5));
-        // mat.setParam('exposurePower', new FloatVars().valueOf(2.0));
-        // mat.setParam('bloomIntensity', new FloatVars().valueOf(2.0));
-        // mat.setParam('blurScale', new FloatVars().valueOf(1.5));
-        let sceneInput = Input.getInput(scene, {id:scene.getId()});
+        mat.setParam('extractThreshold', new FloatVars().valueOf(0.2));
+        let cams = [
+            [
+                new Vector3(-3.954944349292721,16.35814168676132,103.37243513108395),
+                new Vector3(-3.837730145081967,16.04083703035614,102.43138328057047)
+            ],
+            [
+                new Vector3(6.881008330060707,1.592819103187714,67.00876924859638),
+                new Vector3(7.283230609341024,1.1233475404017135,66.22275799563252)
+            ],
+            [
+                new Vector3(-5.441614755212288,-0.024594676316369427,42.910831020937984),
+                new Vector3(-5.8194503626820495,-0.029830640147942143,41.9849731277326)
+            ],
+            [
+                new Vector3(21.363606410632595,8.646861711913166,24.77185665417691),
+                new Vector3(21.41125290072479,8.125852080072432,23.9196367438773)
+            ]
+        ];
+        mainCamera.lookAt(cams[0][0], cams[0][1], Vector3.S_UNIT_AXIS_Y);
 
-        let setParam = (id, callback)=>{
-            let bloomParams = document.getElementById(id);
-            let l = bloomParams.getElementsByTagName('input').length;
-            for(let i = 0;i < l;i++){
-                bloomParams.getElementsByTagName('input')[i].onchange = ()=>{
-                    if(callback){
-                        callback(i, bloomParams.getElementsByTagName('input')[i].value);
-                    }
-                };
-            }
+
+        // 使用dat gui
+        let gui = new dat.GUI();
+        var settings = {
+            cams:0,
+            bloomFilter: true,
+            extractThreshold: 0.2,
+            exposurePower: 2.0,
+            bloomIntensity: 2.0,
+            blurScale: 1.5
         };
-        setParam('bloomParams', (i, value)=>{
-            let mat = bloomFilter.getMaterial();
-            switch (i) {
-                case 0:
-                    mat.setParam('extractThreshold', new FloatVars().valueOf(Number(value)));
-                    break;
-                case 1:
-                    mat.setParam('exposurePower', new FloatVars().valueOf(Number(value)));
-                    break;
-                case 2:
-                    mat.setParam('bloomIntensity', new FloatVars().valueOf(Number(value)));
-                    break;
-                case 3:
-                    mat.setParam('blurScale', new FloatVars().valueOf(Number(value)));
-                    break;
-            }
+        gui.add(settings, 'cams', [0, 1, 2, 3]).onChange(value=>{
+            mainCamera.lookAt(cams[value][0], cams[value][1], Vector3.S_UNIT_AXIS_Y);
         });
-
-
-        sceneInput.on('keydown', (key)=>{
-            if(key == Input.S_KEY_J){
+        gui.add(settings, 'bloomFilter').onChange(swi=>{
+            if(swi){
+                bloomFilter.enable();
+            }
+            else{
                 bloomFilter.disable();
             }
         });
-        sceneInput.on('keydown', (key)=>{
-            if(key == Input.S_KEY_I){
-                bloomFilter.enable();
-            }
+        gui.add(settings, 'extractThreshold', 0.1, 0.3).onChange(value=>{
+            mat.setParam('extractThreshold', new FloatVars().valueOf(value));
+        });
+        gui.add(settings, 'exposurePower', 0.1, 3.0).onChange(value=>{
+            mat.setParam('exposurePower', new FloatVars().valueOf(value));
+        });
+        gui.add(settings, 'bloomIntensity', 0.1, 3.0).onChange(value=>{
+            mat.setParam('bloomIntensity', new FloatVars().valueOf(value));
+        });
+        gui.add(settings, 'blurScale', 0.1, 2.0).onChange(value=>{
+            mat.setParam('blurScale', new FloatVars().valueOf(value));
         });
     });
 
