--- a/Example/Renders/RenderStateDefTest.html
+++ b/Example/Renders/RenderStateDefTest.html
@@ -5,26 +5,32 @@
     <title>RenderStateDefTest</title>
 </head>
 <body>
-<div style="width: 40%;height: 100%;position:fixed">
+<div style="width: 100%;height: 100%;position:fixed;margin: 0px;left: 0px;top: 0px;">
     <canvas id="canvas" style="position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
 </div>
 <script type="module">
-    import Geometry from "../../src/Core/Node/Geometry.js";
     import Scene from "../../src/Core/Scene/Scene.js";
+    import Geometry from "../../src/Core/Node/Geometry.js";
     import RenderEngine from "../../src/Core/RenderEngine.js";
     import Node from "../../src/Core/Node/Node.js";
     import Mesh from "../../src/Core/WebGL/Mesh.js";
     import Material from "../../src/Core/Material/Material.js";
-    import ColorMatDef from "../../src/Core/Assets/MaterialDef/ColorMatDef.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
-    import FirstPersonController from "../../src/Core/InputControl/FirstPersonController.js";
+    import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
+
+    // 案例内容
+    import Ext from "../Ext.js";
+
+    let ext = new Ext();
+    ext.show('  这个案例演示了编写自定义材质控制渲染状态，这个例子使用名为RenderStateDef的材质定义，其中的FaceCullTechnology关闭了FaceCull。', {lineheight:50});
+
+
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     let mainCamera = scene.getComponent('mainCamera');
     mainCamera.lookAt(new Vector3(10, 0, 10), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
-    let firstPersonController = new FirstPersonController(scene, {id:'myController'});
     // 加载一个材质定义
-    let materialDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/RenderStateDef");
+    let materialDef = MaterialDef.load("./RenderStateDef");
     let mat = new Material(scene, {id:"colorMat", materialDef});
     console.log("materialDef:",materialDef);
     // 选择FaceCullTechnology
@@ -42,14 +48,18 @@
         0, 1, 2,
         1, 2, 3
     ]);
-    // let material = new Material(scene, {materialSourceDef:new ColorMatDef()});
     geometry.setMesh(mesh);
     geometry.updateBound();
     geometry.setMaterial(mat);
     let rootNode = new Node(scene, {id:'rootNode'});
     rootNode.addChildren(geometry);
+    rootNode.setLocalRotationFromEuler(0, 90, 0);
     let renderEngine = new RenderEngine();
     scene.addSceneNode(rootNode);
+    let control = new SceneBrowsingController(scene, {id:'control'});
+    control.lookScene(rootNode);
+
+
     renderEngine.addScene(scene);
     renderEngine.launch();
 </script>
