--- a/Example/Scenes/CustomMeshTest.html
+++ b/Example/Scenes/CustomMeshTest.html
@@ -5,9 +5,10 @@
     <title>CustomMeshTest</title>
 </head>
 <body>
-<div style="width: 100%;height: 100%;position:fixed">
+<div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;margin: 0px;">
     <canvas id="canvas" style="position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
 </div>
+<script src="./TankMesh.js"></script>
 <script type="module">
     import Scene from "../../src/Core/Scene/Scene.js";
     import RenderEngine from "../../src/Core/RenderEngine.js";
@@ -15,48 +16,48 @@
     import Material from "../../src/Core/Material/Material.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
-    import FirstPersonController from "../../src/Core/InputControl/FirstPersonController.js";
     import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
-    import Box from "../../src/Core/Node/Shape/Box.js";
-    import Sphere from "../../src/Core/Node/Shape/Sphere.js";
-    import Plane from "../../src/Core/Node/Shape/Plane.js";
     import Geometry from "../../src/Core/Node/Geometry.js";
-    import MeshFactor from "../../src/Core/Util/MeshFactor.js";
     import Mesh from "../../src/Core/WebGL/Mesh.js";
+    import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
+    import Vec4Vars from "../../src/Core/WebGL/Vars/Vec4Vars.js";
+    import FloatVars from "../../src/Core/WebGL/Vars/FloatVars.js";
+
+
+
     let scene = new Scene({cavnas:document.getElementById('canvas')});
+    scene.setAmbientLightColor(0.2, 0.2, 0.2);
     let mainCamera = scene.getComponent('mainCamera');
     let pos = new Vector3(50000, 60000, 70000);
     let at = new Vector3(1550, 0, 2000);
     pos.multLength(0.01);
     pos.multLength(0.01);
     mainCamera.lookAt(pos, at, new Vector3(0, 1, 0));
-    let firstPersonController = new FirstPersonController(scene, {id:'myController'});
-    firstPersonController.setMovementSpeed(100);
-    let materialDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/BasicLightingDef");
-    console.log("materialDef:",materialDef);
+    let materialDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/Light/BasicLightingDef");
     let basicLightingMat = new Material(scene, {id:"basicLightingMat", materialDef});
-    basicLightingMat.selectTechnology('BlinnPhongLight2');
 
     // 自定义一个渲染几何体
     // 支持几乎场景的属性列表以及自定义属性列表
     let geometry = new Geometry(scene, {id:"custom"});
     let mesh = new Mesh();
-    let indices = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35];
-    let positions = [3100, 100, 4000, 3100, 100, 0, 0, 100, 0, 0, 100, 4000, 3100, 100, 4000, 0, 100, 0, 0, 100, 4000, 0, 100, 0, 0, -100, 0, 0, -100, 4000, 0, 100, 4000, 0, -100, 0, 0, -100, 4000, 0, -100, 0, 3100, -100, 0, 3100, -100, 4000, 0, -100, 4000, 3100, -100, 0, 3100, -100, 4000, 3100, -100, 0, 3100, 100, 0, 3100, 100, 4000, 3100, -100, 4000, 3100, 100, 0, 0, -100, 0, 0, 100, 0, 3100, -100, 0, 3100, -100, 0, 0, 100, 0, 3100, 100, 0, 3100, -100, 4000, 0, 100, 4000, 0, -100, 4000, 3100, 100, 4000, 0, 100, 4000, 3100, -100, 4000];
-    let normals = [0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 6.12303176911189E-17, -1.83690953073357E-16, -1, 6.12303176911189E-17, -1.83690953073357E-16, -1, 6.12303176911189E-17, -1.83690953073357E-16, -1, 6.12303176911189E-17, -1.83690953073357E-16, -1, 6.12303176911189E-17, -1.83690953073357E-16, -1, 6.12303176911189E-17, -1.83690953073357E-16, -2.99932144364427E-32, -1, 1.22460635382238E-16, -2.99932144364427E-32, -1, 1.22460635382238E-16, -2.99932144364427E-32, -1, 1.22460635382238E-16, -2.99932144364427E-32, -1, 1.22460635382238E-16, -2.99932144364427E-32, -1, 1.22460635382238E-16, -2.99932144364427E-32, -1, 1.22460635382238E-16, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1.22460635382238E-16, 6.12303176911189E-17, -1, 1.22460635382238E-16, 6.12303176911189E-17, -1, 1.22460635382238E-16, 6.12303176911189E-17, -1, 1.22460635382238E-16, 6.12303176911189E-17, -1, 1.22460635382238E-16, 6.12303176911189E-17, -1, 1.22460635382238E-16, 6.12303176911189E-17, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1];
-    console.log('trs:' + (positions.length / 3));
-    mesh.setData(Mesh.S_POSITIONS, positions);
-    mesh.setData(Mesh.S_NORMALS, normals);
-    mesh.setData(Mesh.S_INDICES, indices);
+    let tankData = TankMesh;
+    mesh.setData(Mesh.S_POSITIONS, tankData.positions);
+    mesh.setData(Mesh.S_NORMALS, tankData.normals);
+    mesh.setData(Mesh.S_INDICES, tankData.indices);
     geometry.setMesh(mesh);
+    basicLightingMat.setParam('ambientColor', new Vec4Vars().valueFromXYZW(0.2, 0.2, 0.2, 1.0));
+    basicLightingMat.setParam('diffuseColor', new Vec4Vars().valueFromXYZW(0.5, 0.5, 0.5, 1.0));
+    basicLightingMat.setParam('specularColor', new Vec4Vars().valueFromXYZW(1.0, 1.0, 1.0, 1.0));
+    basicLightingMat.setParam('shininess', new FloatVars().valueOf(32.0));
     geometry.setMaterial(basicLightingMat);
     geometry.updateBound();
     geometry.setLocalScaleXYZ(0.01, 0.01, 0.01);
-    console.log(geometry.getBoundingVolume());
 
 
     let rootNode = new Node(scene, {id:'rootNode'});
     rootNode.addChildren(geometry);
+    let sceneControl = new SceneBrowsingController(scene, {id:'sceneControl'});
+    sceneControl.lookScene(rootNode);
 
     let dirLight = new DirectionalLight(scene, {id:'dirLight'});
     dirLight.setDirectionXYZ(1, -0.5, 1);
