--- a/Example/Scenes/SkyEnvHDRTest.html
+++ b/Example/Scenes/SkyEnvHDRTest.html
@@ -33,8 +33,8 @@
     sky.getMaterial().setParam('useHDR', new BoolVars().valueOf(true));
     let envMap = new Texture2DVars(scene);
     envMap.setPreloadColor(scene, new Vector4(0.5, 0.5, 0.5, 1.0));
-    envMap.setImageSrc(scene, '../Assets/Textures/hdr/newport_loft.hdr', {rgbe:true, rgbe5:true});
-    // envMap.setTextureFormat(Texture2DVars.S_TEXTURE_FORMAT.S_RGBE5, Texture2DVars.S_TEXTURE_FORMAT.S_RGB, Texture2DVars.S_TEXTURE_FORMAT.S_FLOAT);
+    envMap.setImageSrc(scene, '../Assets/Textures/hdr/newport_loft.hdr', {rgbe:true, linearFloat:true});
+    envMap.setTextureFormat(Texture2DVars.S_TEXTURE_FORMAT.S_RGBE5, Texture2DVars.S_TEXTURE_FORMAT.S_RGB, Texture2DVars.S_TEXTURE_FORMAT.S_FLOAT);
     envMap.setWrap(scene, Texture2DVars.S_WRAPS.S_CLAMP_TO_EDGE, Texture2DVars.S_WRAPS.S_CLAMP_TO_EDGE);
     envMap.setFilter(scene, Texture2DVars.S_FILTERS.S_LINEAR, Texture2DVars.S_FILTERS.S_LINEAR);
     sky.getMaterial().setParam('envMap', envMap);
@@ -44,7 +44,7 @@
     // 创建一个场景
     let rootNode = new Node(scene, {id:'rootNode'});
     let objLoader = new OBJLoader();
-    objLoader.setAssetsPath('../../src/Core/Assets/MaterialDef/');
+    objLoader.setAssetsPath('../../src/Core/Assets/MaterialDef/Light/');
     objLoader.load(scene, 'obj1', './../Assets/Models/OBJ/testScene.obj', modelNode=>{
         let sceneController = new SceneBrowsingController(scene, {id:'control'});
         sceneController.lookScene(modelNode);
